# check-all-commits-have-jira-issue

./: Cargo.toml  README.md
src/: git_utils.rs  jira_utils.rs  main.rs
tests/: integration_main.rs
tests/common/: git_helpers.rs  jira_helpers.rs  mod.rs
