[package]
name = "my_rust_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.4", features = ["derive"] }
git2 = "~0.18.1"
regex = "~1.10"
reqwest = { version = "~0.11", features = ["json"] }
tokio = { version = "~1.32", features = ["full"] }

[dev-dependencies]
wiremock = "~0.6"
tempfile = "~3.8"
assert_cmd = "~2.0"
predicates = "~3.0"
git2 = "~0.18.1" # For test setup if needed
anyhow = "~1.0"
